# world_cup

./: .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml
app/: dashboard.py
data/examples/: synthetic_matches.csv  synthetic_players.csv
data/processed/: backtest_2024_calibration.csv  backtest_2024_predictions.csv  matches.parquet  model_comparison_dc.csv  post_june12_worldcup_comparison.csv  worldcup.db  (+9 more)
docs/: model_comparison.md  operations.md  schema.sql  tournament_backtest.md
models/: bayesian_current.json  bayesian_synthetic.json  dixon_coles_current.json  dixon_coles_synthetic.json  elo_poisson_current.json  elo_poisson_v1.json  rating_v2_poisson_current.json  value_engine_bd_current.json
scripts/: evaluate_worldcup_results.py  extract_fifa_annexe_c.py  generate_historical_worldcup_files.py
tests/: test_actual_results.py  test_api.py  test_api_football.py  test_backtest.py  test_baseline.py  test_bayesian.py  test_catch_up.py  test_compute.py  test_dashboard.py  test_db.py  test_distilled_value.py  test_dixon_coles.py  test_dixon_coles_backtest.py  test_download.py  test_dynamic_update.py  test_elo.py  test_elo_poisson.py  test_forecast_archive.py  test_formats.py  test_group_stage.py  test_ingestion.py  test_metrics.py  test_model_registry.py  test_neural_outcome.py  test_neural_outcome_evaluation.py  test_parquet_io.py  test_player_features.py  test_pymc_bayesian.py  test_rating_v2.py  test_rating_v2_backtest.py  test_rating_v2_poisson.py  test_tournament.py  test_tournament_backtest.py  test_tournament_value.py
(+64 files in other folders)
