[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup-predictor"
version = "0.1.0"
description = "World Football Elo and Poisson score prediction engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4,<6",
    "fastapi>=0.115,<0.116",
    "httpx>=0.27,<0.28",
    "numpy>=2.0,<3",
    "pandas>=2.2,<4",
    "psycopg[binary]>=3.2,<4",
    "pyarrow>=16,<23",
    "redis>=5,<7",
    "scipy>=1.14,<2",
    "scikit-learn>=1.5,<2",
    "sqlalchemy>=2.0,<3",
    "streamlit>=1.40,<2",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<10",
]
bayes = [
    "pymc>=5.20,<6",
    "arviz>=0.20,<1",
]
gpu = [
    "torch>=2.6,<3",
]

[project.scripts]
worldcup-predictor = "worldcup_predictor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = [".", "src"]
testpaths = ["tests"]
markers = ["slow: runs MCMC or other intentionally slower model tests"]
